# Bot-2

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
androidrepo/: __init__.py  __main__.py  bot.py
androidrepo/database/: __init__.py  contact.py  core.py  magisk.py  quickpic.py  requests.py  xposed.py
androidrepo/modules/: contact.py  magisk.py  microg.py  orangefox.py  pm_menu.py  request.py  reup.py  sudo.py  twrp.py  xposed.py
androidrepo/modules/utils/: __init__.py  magisk.py  quickpic.py  xposed.py
androidrepo/utils/: __init__.py  filters.py
