[tool.poetry]
name = "androidrepo"
version = "1.0.0"
description = "The official bot of AndroidRepo @ Telegram"
authors = ["Hitalo <hitalo@amanoteam.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
httpx = {version = "^0.23.0", extras = ["http2"]}
kantex = "^0.2.0"
python-rapidjson = "^1.8"
meval = "^2.5"
TgCrypto = "^1.2.3"
aiosqlite = "^0.17.0"
aiocron = "^1.8"
pyrogram = {git = "https://github.com/AmanoTeam/pyrogram"}
sentry-sdk = "^1.9.5"
aiodown = {git = "https://github.com/AmanoTeam/aiodown", rev = "main"}
uvloop = {version = "^0.16", optional = true}
lxml = "^4.9.1"
PyGithub = "^1.55"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.6"
flake8 = "^4.0.1"
mypy = "^0.971"
isort = "^5.10.1"

[tool.poetry.extras]
fast = ["uvloop"]

[tool.black]
target-version = ['py39', 'py310']
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.vscode
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
